# zeitgeist

./: .bzrignore  .gitignore  .gitmodules  .project  .pydevproject  AUTHORS  CMakeLists.txt  CONTRIBUTERS  CONTRIBUTORS  COPYRIGHT  HACKING  MAINTAINERS  Makefile  Makefile.am  NEWS  README  README.Ontology  README.md  TODO  VERSION  autogen.sh  bug_testrunner.py  calendar.glade  config.vapi  configure.ac  firefox-history.sqlite  gzg.sqlite  setup.py  stormtest.sqlite  test-daemon.py  unittest.sqlite  zeitgeist-daemon  zeitgeist-daemon.py  zeitgeist-daemon.sh  zeitgeist-datahub  zeitgeist-datahub.py  zeitgeist-extension.pc.in  zeitgeist-journal  zeitgeist-journal.py  zeitgeist-journal.sh  (+6 more)
data/: AUTHOR  Makefile.am  gzg.sqlite  ontology2code  org.gnome.zeitgeist.Engine.service.in  org.gnome.zeitgeist.service  org.gnome.zeitgeist.service.in  zeitgeist-datahub.desktop.in  zeitgeist.service.in  zeitgeist.sqlite
data/extra/: org.gnome.Zeitgeist.service  zeitgeist-journal.desktop
data/logo/: Makefile.am  gnome-zeitgeist.xpm
data/ontology/: zg.trig
doc/libzeitgeist/: Makefile.am  zeitgeist-2.0-docs.sgml  zeitgeist-gtkdoc-index.sgml
examples/: Makefile.am  build.txt  data-source-stuff.vala  get-events-with-id.vala  insert-events.vala  monitor-events.vala  most-recent-events.vala
examples/c/: Makefile.am  find-events.c  monitor-events.c  search-events.c
examples/js/: find_events.js
examples/python/: find_events.py  get_events.py  insert_event.py  monitor.py
examples/vala/: Makefile.am  data-source-stuff.vala  get-events-with-id.vala  insert-events.vala  monitor-events.vala  most-recent-events.vala
extensions/: Makefile.am  benchmark.vala  blacklist.vala  ds-registry.vala  fts.vala  histogram.vala  storage-monitor.vala
extensions/fts++/: Makefile.am  controller.cpp  controller.h  datamodel.vala  db-reader.vala  engine.vala  errors.vala  event-cache.vala  ext-dummies.vala  fts.cpp  fts.h  fts.vapi  indexer.cpp  indexer.h  indexer.vala  indexer.vapi  mimetype.vala  ontology-uris.vala  ontology.vala  org.gnome.zeitgeist.SimpleIndexer.service.in  org.gnome.zeitgeist.fts.service.in  remote.vala  sql-schema.vala  sql.vala  stringutils.cpp  stringutils.h  table-lookup.vala  task.cpp  task.h  utils.vala  where-clause.vala  zeitgeist-fts.service.in  zeitgeist-fts.vala
extensions/fts-python/: Makefile.am  constants.py  datamodel.py  fts.py  lrucache.py  org.gnome.zeitgeist.fts.service.in  sql.py
extra/: Makefile.am  OntologySerializer.py  PythonSerializer.py  README.zeitgeist.trig  ValaSerializer.py  ontology2code  ontology_parser.py  org.gnome.Zeitgeist.service  org.gnome.zeitgeist.service  org.gnome.zeitgeist.service.in  rdfxml2code  rdfxml2py  rdfxml2vala  test-daemon.py  trig2py  zeitgeist-journal.desktop  zeitgeist-journal.desktop.in.in  zeitgeist-trayicon.desktop  zeitgeist-trayicon.desktop.in.in  zeitgeist.trig
extra/epiphany/: Makefile.am  zeitgeist-logger.ephy-extension  zeitgeist-logger.py
extra/ontology/: Makefile.am  nfo.trig  nie.trig  zeo.trig  zg.trig
extra/packaging/: create-debian-snapshot-package.sh
extra/python/: Makefile.am
libzeitgeist/: API_CHANGES  Makefile.am  TODO  Zeitgeist-2.0.gir  Zeitgeist-2.0.typelib  data-source-registry.vala  data-source.vala  datamodel.vala  db-reader.vala  enumerations.vala  event.vala  index.vala  libzeitgeist-2.0.pc.in  log.vala  mimetype.vala  monitor.vala  ontology-uris.vala  ontology-uris.vala.in  ontology.vala  ontology.vala.in  queued-proxy-wrapper.vala  remote.vala  result-set.vala  simple-result-set.vala  sql-schema.vala  sql.vala  subject.vala  table-lookup.vala  timerange.vala  timestamp.vala  utils.vala  where-clause.vala  zeitgeist-2.0.pc  zeitgeist-2.0.pc.in  zeitgeist-2.0.vapi  zeitgeist-private.h  zeitgeist.h
libzeitgeist/client/: Makefile.am  index.vala  log.vala
libzeitgeist/internal/: Makefile.am  sql-schema.vala  sql.vala
libzeitgeist/utils/: Makefile.am  table-lookup.vala  utils.vala  utils.vala~
src/: CMakeLists.txt  Makefile.am  config.vala.in  constants.vala  datamodel.vala  db-reader.vala  engine.vala  errors.vala  event-cache.vala  ext-benchmark.vala  ext-blacklist.vala  ext-data-source-registry.vala  ext-fts.vala  ext-histogram.vala  ext-storage-monitor.vala  extension-collection.vala  extension-store.vala  extension.vala  firefox-history.sqlite  logging.vala  main.vala  mimetype.vala  notify.vala  ontology.vala  ontology.vala.in  remote.vala  sql-schema.vala  sql.vala  sql_schema.vala  start.py  start2.py  table-lookup.vala  tags.py  utils.vala  where-clause.vala  zeitgeist-daemon.py  zeitgeist-daemon.vala  zeitgeist.sqlite  zeitgeist_shared.py
src/mayanna_engine/: mayanna_base.py  mayanna_datasink.py  mayanna_fav.py  mayanna_firefox.py  mayanna_recent.py  mayanna_tomboy.py  mayanna_util.py
src/mayanna_gui/: mayanna_calendar_gui.py  mayanna_gui.py  mayanna_gui_helpers.py  mayanna_panel_widgets.py
src/zeitgeist_engine/: ThreadPool.py  W3CDate.py  xdgdirs.py  zeitgeist_base.py  zeitgeist_datasink.py  zeitgeist_dbcon.py  zeitgeist_dbus.py  zeitgeist_evolution.py  zeitgeist_firefox.py  zeitgeist_recent.py  zeitgeist_tomboy.py  zeitgeist_trayicon.py  zeitgeist_twitter.py  zeitgeist_util.py
src/zeitgeist_experimental/: zeitgeist-projectviewer.py
src/zeitgeist_gui/: gtk_clutter.py  zeitgeist-journal.py  zeitgeist-projectviewer.py  zeitgeist-timeline.py  zeitgeist-trayicon.py  zeitgeist_base.py  zeitgeist_bookmarker.py  zeitgeist_calendar_gui.py  zeitgeist_clutter_gui.py  zeitgeist_dbus.py  zeitgeist_engine_wrapper.py  zeitgeist_gui.py  zeitgeist_gui2.py  zeitgeist_gui_main.py  zeitgeist_gui_old.py  zeitgeist_journal_widgets.py  zeitgeist_panel_widgets.py  zeitgeist_panel_widgets2.py  zeitgeist_panel_widgets_old.py  zeitgeist_project_gui.py  zeitgeist_timeline_widgets.py  zeitgeist_util.py  zeitgeist_util_widgets.py  zeitgeist_widgets.py
src/zeitgeist_shared/: basics.py  (+2 more)
zeitgeist/: Makefile.am  __init__.py  _config.py  _config.py.in  client.py  config.py  config.py.in  datamodel.py  datamodel_ng.py  dbusutils.py  lrucache.py  mimetypes.py  singleton.py  zeitgeist-daemon.py
(+371 files in other folders)
